# routes/api.php
@@ -3,6 +3,7 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\api\AuthController;
+use App\Http\Controllers\SiteController;
 use App\Http\Controllers\MovieController;
 
 
@@ -18,6 +19,7 @@ use App\Http\Controllers\MovieController;
 */
 
 Route::post('/register', [AuthController::class, 'register']);
+Route::get('/siteMap', [SiteController::class, 'siteMap']);
 Route::post('/login', [AuthController::class, 'login']);
 
 Route::resource('movies', MovieController::class);
@@ -26,16 +28,17 @@ Route::middleware('jwt.verify')->group(function () {
     Route::post('/logout', [AuthController::class, 'logout']);
 });
 
-Route::prefix('api/')->group(function () {
+Route::post('/siteMapDetails', [SiteController::class, 'siteMapDetails']);
+Route::prefix('api')->group(function () {
     // Route::post('/register', 'Api\AuthController@register');
 });
 
-// Route::post('/register', [AuthController::class, 'register'])->name('register');
+// Route::get('/site_map', [SiteController::class, 'siteMap'])->name('site_map');
 // Route::post('/login', [AuthController::class, 'login'])->name('login');
 
 
 
 
-Route::middleware('auth:api')->get('/user', function (Request $request) {
-    return $request->user();
-});
+// Route::middleware('auth:api')->get('/user', function (Request $request) {
+//     return $request->user();
+// });
